Split AddAll test into separate NoPreview and Preview scenarios using @enablePreview tag.